// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render тесты должен вернуть кооректный элемент 1`] = `
<Modal
  animation={true}
  closer={true}
  contentClassName="DealerPaymentModal"
  onRequestHide={[Function]}
  renderFooterButtons={[Function]}
  visible={false}
  zIndexGroupLevel={20}
>
  <div
    className="DealerPaymentModal__title"
  >
    Оплата услуги «История размещений»
  </div>
  <div
    className="DealerPaymentModal__description"
  >
    <Price
      currency="RUR"
      free="0"
      postfix="за просмотр истории по объявлению."
      prefix="Со счёта салона будет списано"
      price={150}
      separator=" "
    />
  </div>
</Modal>
`;

exports[`render тесты должен вернуть кооректный элемент, если isMobile = true 1`] = `
<Modal
  animation={true}
  closer={true}
  contentClassName="DealerPaymentModal DealerPaymentModal_mobile"
  onRequestHide={[Function]}
  renderFooterButtons={[Function]}
  visible={true}
  zIndexGroupLevel={20}
>
  <div
    className="DealerPaymentModal__title"
  >
    Оплата услуги «История размещений»
  </div>
  <div
    className="DealerPaymentModal__description"
  >
    <Price
      currency="RUR"
      free="0"
      postfix="за просмотр истории по объявлению."
      prefix="Со счёта салона будет списано"
      price={150}
      separator=" "
    />
  </div>
</Modal>
`;
